ansible/roles/devious-developer-data-dump/templates/manifests/06-ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitea
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - backend:
            service:
              name: gitea-http
              port:
                number: 3000
          path: /
          pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-zot
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /v2/
          pathType: Prefix
          backend:
            service:
              name: zot
              port:
                number: 5000
